--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
 
     background-image: linear-gradient(360deg, rgba(219, 216, 228, 0.48503151260504207) 100%, rgba(208, 208, 208, 0.0844712885154062) 100%), url("../../Assests/background.jpg");
-    height: 100%;
+    height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
