--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,5 +1,5 @@
 .container {
-    padding: 80px 120px;
+    padding: 80px 140px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,6 +8,9 @@
 }
 
 .child {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
     min-width: 75%;
 }
 
