--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 42px 0;
+    padding: 8px 0;
 }
 
 h2 {
@@ -34,4 +34,11 @@ p {
 .background {
     color: rgb(20, 20, 51);
     background-color: rgb(238, 161, 110);
+}
+
+@media only screen and (max-width: 800px) {
+    .container {
+        padding: 80px 10px;
+
+    }
 }
