--- a/src/components/Subsection/subsection.module.css
+++ b/src/components/Subsection/subsection.module.css
@@ -6,7 +6,14 @@
 }
 
 .item {
-    max-width: 45%;
-    padding: 0 45px;
+    max-width: 55%;
+    padding: 0 16px;
 
+}
+
+@media only screen and (max-width: 800px) {
+    .item {
+        max-width: 100%;
+        padding: 4px 0;
+    }
 }
