--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,44 +1,19 @@
 .container {
-    padding: 80px 140px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(245, 223, 208);
-}
-
-.child {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    min-width: 75%;
-}
-
-.text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 8px 0;
-}
-
-h2 {
-    font-size: 48px;
-    font-weight: normal;
-
-}
-
-p {
-    font-size: 24px;
+  padding: 0px 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .background {
-    color: rgb(20, 20, 51);
-    background-color: rgb(238, 161, 110);
+  color: rgb(20, 20, 51);
+  background-color: rgb(238, 161, 110);
 }
 
 @media only screen and (max-width: 800px) {
-    .container {
-        padding: 80px 10px;
-
-    }
+  .container {
+    padding: 0px 80px;
+  }
 }
