--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,21 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
 }
 
 a {
   text-decoration: none;
-  color: blue
+  color: #05a0e7;
+}
+
+h2 {
+  font-size: 36px;
+  line-height: 1.4;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 code {
