--- a/src/components/Subsection/subsection.module.css
+++ b/src/components/Subsection/subsection.module.css
@@ -1,19 +1,19 @@
 .root {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 50px;
 }
 
 .item {
-    max-width: 55%;
-    padding: 0 16px;
-
+  max-width: 65%;
+  padding: 0 16px;
 }
 
 @media only screen and (max-width: 800px) {
-    .item {
-        max-width: 100%;
-        padding: 4px 0;
-    }
+  .item {
+    max-width: 100%;
+    padding: 4px 0;
+  }
 }
