--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -9,6 +9,7 @@
   position: fixed;
   z-index: 100;
   top: 0;
+  box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.15);
 }
 .navLinks {
   margin-left: auto;
