responsive blogs page and footer

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,27 @@ p {
   line-height: 1.7;
 }
 
+@media screen and (max-width: 1050px) {
+  p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  p {
+    font-size: 20px;
+    line-height: 1.7;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
