add profile menu and fix console errors

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -86,6 +86,8 @@
 }
 .loginButton {
   cursor: pointer;
+  display: inline-flex;
+  vertical-align: middle;
 }
 .loginButton:hover {
   color: #05a0e7;
